# flink-cdc-gateway

./: Dockerfile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-publish.yml
cdc_gateway/: __init__.py  admin.py  app.py  flink_client.py
tests/: test_admin.py  test_flink_client.py
